--- a/ncert_mtech_dec.ipynb
+++ b/ncert_mtech_dec.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOJv8PoKthgJBzjmD8h6f8T",
+      "authorship_tag": "ABX9TyM+PKpAlRTZ5sPW2Dznh+j/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4824,28 +4824,98 @@
       "cell_type": "code",
       "source": [
         "# for github push inalid notebook error\n",
-        "from google.colab import _message\n",
-        "_message.blocking_request('clean_metadata', {})\n"
+        "\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "q7h5kEMOMMIa",
-        "outputId": "6ecdcff5-bea7-455d-8c6c-7463075aefdd"
+        "outputId": "3bccb0e2-b96a-4760-a472-233d47909e46"
       },
-      "execution_count": 22,
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'error': {'type': 'NO_HANDLER_ERROR',\n",
-              "  'description': 'No handler was provided for the given request type: clean_metadata'}}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 22
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "print(os.getcwd())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eVjv6ZcqSnpo",
+        "outputId": "6a639e72-30c4-41a3-8946-f22a4ab9ec0d"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import json\n",
+        "\n",
+        "# REPLACE THIS with the path to your problematic notebook\n",
+        "file_path = '/content/drive/MyDrive/Colab Notebooks/ncert_mtech_dec.ipynb'\n",
+        "\n",
+        "try:\n",
+        "    # Open the notebook as raw JSON\n",
+        "    with open(file_path, 'r', encoding='utf-8') as f:\n",
+        "        notebook = json.load(f)\n",
+        "\n",
+        "    # check if metadata exists\n",
+        "    if 'metadata' in notebook:\n",
+        "        # Check for and remove the 'widgets' key\n",
+        "        if 'widgets' in notebook['metadata']:\n",
+        "            del notebook['metadata']['widgets']\n",
+        "            print(f\"✅ Success: Removed 'widgets' metadata from {file_path}\")\n",
+        "        else:\n",
+        "            print(\"ℹ️ No 'widgets' metadata found. The file is already clean.\")\n",
+        "\n",
+        "    # Save the clean notebook back to disk\n",
+        "    with open(file_path, 'w', encoding='utf-8') as f:\n",
+        "        json.dump(notebook, f, indent=1)\n",
+        "        print(\"💾 File saved successfully.\")\n",
+        "\n",
+        "except Exception as e:\n",
+        "    print(f\"❌ Error: {e}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wzJliGT0SHu3",
+        "outputId": "45b4b4e5-0634-4ad4-c27d-9b4b53f02351"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Success: Removed 'widgets' metadata from /content/drive/MyDrive/Colab Notebooks/ncert_mtech_dec.ipynb\n",
+            "💾 File saved successfully.\n"
+          ]
         }
       ]
     },
@@ -5738,6 +5808,74 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 2nd updated parameter\n"
+      ],
+      "metadata": {
+        "id": "Lx6eFwMzPU7-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from trl import SFTTrainer\n",
+        "from transformers import TrainingArguments\n",
+        "from unsloth import is_bfloat16_supported\n",
+        "\n",
+        "# CALCULATION:\n",
+        "# 3000 examples / 2 batch size = 1500 steps per epoch.\n",
+        "# We want 1 full epoch.\n",
+        "\n",
+        "trainer = SFTTrainer(\n",
+        "    model = model,\n",
+        "    tokenizer = tokenizer,\n",
+        "    train_dataset = dataset,\n",
+        "    dataset_text_field = \"text\",\n",
+        "    max_seq_length = max_seq_length,\n",
+        "    dataset_num_proc = 2,\n",
+        "    packing = False,\n",
+        "    args = TrainingArguments(\n",
+        "        per_device_train_batch_size = 2,\n",
+        "        gradient_accumulation_steps = 4,\n",
+        "        warmup_steps = 50, # Increased warmup for larger data\n",
+        "\n",
+        "        # --- CRITICAL CHANGE HERE ---\n",
+        "        # max_steps = 60,  <-- DELETE THIS LINE\n",
+        "        num_train_epochs = 1, # <-- ADD THIS. This forces it to read all 3000 rows.\n",
+        "        # ----------------------------\n",
+        "\n",
+        "        learning_rate = 2e-4,\n",
+        "        fp16 = not is_bfloat16_supported(),\n",
+        "        bf16 = is_bfloat16_supported(),\n",
+        "        logging_steps = 10, # Log every 10 steps so you can see progress\n",
+        "        optim = \"adamw_8bit\",\n",
+        "        weight_decay = 0.01,\n",
+        "        lr_scheduler_type = \"linear\",\n",
+        "        seed = 3407,\n",
+        "        output_dir = \"outputs\",\n",
+        "    ),\n",
+        ")\n",
+        "\n",
+        "print(\"Starting Full Training on 3k Dataset...\")\n",
+        "trainer_stats = trainer.train()"
+      ],
+      "metadata": {
+        "id": "m8VlsfvGPaSo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "82l2hxU5PUZf"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
